force-app/main/default/objects/phsUserOnboardingQuestion__c/phsUserOnboardingQuestion__c.object-meta.xml
<CustomObject>
    <label>phsUserOnboardingQuestion</label>
    <nameField>
        <label>UserOnboardingQuestion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsUserOnboardingQuestion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>