force-app/main/default/objects/phsUserOnboardingQuestion__c/fields/IsMultiChoice__c.field-meta.xml
<CustomField>
    <fullName>IsMultiChoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMultiChoice</label>
    <type>Checkbox</type>
</CustomField>